@@ -8,19 +8,19 @@
 # script is sourced, the variable $dir must contain the
 # full path name of this file's directory.
 
-package ifneeded browse 2.0     [list source [file join $dir browse.tcl]]
-package ifneeded groupchat 1.0  [list source [file join $dir groupchat.tcl]]
-package ifneeded jlib 2.0       [list source [file join $dir jabberlib.tcl]]
-package ifneeded jlib::http 0.1 [list source [file join $dir jlibhttp.tcl]]
-package ifneeded jlibsasl 1.0   [list source [file join $dir jlibsasl.tcl]]
-package ifneeded jlibtls 1.0    [list source [file join $dir jlibtls.tcl]]
-package ifneeded roster 1.0     [list source [file join $dir roster.tcl]]
-package ifneeded saslmd5 1.0    [list source [file join $dir saslmd5.tcl]]
-package ifneeded service 1.0    [list source [file join $dir service.tcl]]
-package ifneeded stanzaerror 1.0 [list source [file join $dir stanzaerror.tcl]]
-package ifneeded streamerror 1.0 [list source [file join $dir streamerror.tcl]]
-package ifneeded tinydom 0.1  [list source [file join $dir tinydom.tcl]]
-package ifneeded wrapper 1.0  [list source [file join $dir wrapper.tcl]]
+package ifneeded browse         2.0 [list source [file join $dir browse.tcl]]
+package ifneeded groupchat      1.0 [list source [file join $dir groupchat.tcl]]
+package ifneeded jlib           2.0 [list source [file join $dir jabberlib.tcl]]
+package ifneeded jlib::http     0.1 [list source [file join $dir jlibhttp.tcl]]
+package ifneeded jlibsasl       1.0 [list source [file join $dir jlibsasl.tcl]]
+package ifneeded jlibtls        1.0 [list source [file join $dir jlibtls.tcl]]
+package ifneeded roster         1.0 [list source [file join $dir roster.tcl]]
+package ifneeded saslmd5        1.0 [list source [file join $dir saslmd5.tcl]]
+package ifneeded service        1.0 [list source [file join $dir service.tcl]]
+package ifneeded stanzaerror    1.0 [list source [file join $dir stanzaerror.tcl]]
+package ifneeded streamerror    1.0 [list source [file join $dir streamerror.tcl]]
+package ifneeded tinydom        0.1 [list source [file join $dir tinydom.tcl]]
+package ifneeded wrapper        1.0 [list source [file join $dir wrapper.tcl]]
 
 package ifneeded jlib::avatar      0.1 [list source [file join $dir avatar.tcl]]
 package ifneeded jlib::bytestreams 0.1 [list source [file join $dir bytestreams.tcl]]
